--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/timkeresey/node-notes-app/issues"
   },
-  "homepage": "https://github.com/timkeresey/node-notes-app#readme"
+  "homepage": "https://github.com/timkeresey/node-notes-app#readme",
+  "dependencies": {
+    "validator": "^10.8.0"
+  }
 }
